tests/ui/parser/recover/recover-elif.stderr
error: `elif` is not valid syntax
  --> $DIR/recover-elif.rs:4:6
   |
LL |    } elif 2 > 1 {
   |      ^^^^ help: use `else if` instead

error: aborting due to previous error

